fixed z-index of mobile-menu

--- a/src/Components/Navigation/Navigation.scss
+++ b/src/Components/Navigation/Navigation.scss
@@ -5,6 +5,8 @@
 .nav-container {
     width: 100%;
     margin-top: 1rem;
+    position: relative;
+    z-index: 1;
     
     .navigation{
         background-color: $yellow;
@@ -92,8 +94,7 @@
         color: $white;
         border-radius: 5px;
         float: right;
-        margin-right: 5vw;
-        margin-top: 1rem;
+        margin: 1rem 5vw;
     }
 
 }
